overflow issue

--- a/app/assets/stylesheets/preact/onboarding-modal.scss
+++ b/app/assets/stylesheets/preact/onboarding-modal.scss
@@ -28,7 +28,7 @@
 // modal inner content spacing
 .onboarding-content {
   box-sizing: border-box;
-  flex: 1 0 auto;
+  flex: 1 auto;
   padding: var(--su-4);
   width: 100%;
   max-height: calc(100vh - 70px);
